[package]
name = "delineate"
version = "0.1.0"
authors = ["Dave Patrick Caberto"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_6"] }
anyhow = "1.0"
async-lock = "3.2"
futures-util = { version = "0.3", features = ["io"] }
futures-channel = "0.3"
fuzzy-matcher = "0.3.7"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_46"] }
gtk_source = { package = "sourceview5", version = "0.9", features = ["v5_10"] }
indexmap = "2.7"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
webkit = { package = "webkit6", version = "0.4.0", features = ["v2_42"] }
